--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "portfolio-nextjs",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-email/components": "^0.0.14",
-    "@react-email/tailwind": "^0.0.14",
-    "clsx": "^2.1.0",
-    "framer-motion": "^10.18.0",
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "react-intersection-observer": "^9.5.3",
-    "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^0.16.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-vertical-timeline-component": "^3.3.6",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  }
+    "name": "portfolio-nextjs",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbo",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@react-email/components": "^0.0.14",
+        "@react-email/tailwind": "^0.0.14",
+        "axios": "^1.6.7",
+        "clsx": "^2.1.0",
+        "framer-motion": "^10.18.0",
+        "next": "14.0.4",
+        "nodemailer": "^6.9.9",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hot-toast": "^2.4.1",
+        "react-icons": "^5.0.1",
+        "react-intersection-observer": "^9.5.3",
+        "react-vertical-timeline-component": "^3.6.0",
+        "resend": "^3.1.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/nodemailer": "^6.4.14",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/react-vertical-timeline-component": "^3.3.6",
+        "autoprefixer": "^10.0.1",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    }
 }
