--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@react-email/components": "^0.0.14",
         "@react-email/tailwind": "^0.0.14",
+        "@vercel/analytics": "^1.1.3",
         "@vercel/speed-insights": "^1.0.9",
         "axios": "^1.6.7",
         "clsx": "^2.1.0",
