--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
         "@vercel/analytics": "^1.1.3",
         "@vercel/speed-insights": "^1.0.9",
         "axios": "^1.6.7",
-        "clsx": "^2.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
         "framer-motion": "^10.18.0",
+        "lucide-react": "^0.408.0",
         "next": "14.0.4",
+        "next-themes": "^0.3.0",
         "nodemailer": "^6.9.9",
         "react": "^18",
         "react-dom": "^18",
-        "react-hot-toast": "^2.4.1",
         "react-icons": "^5.0.1",
         "react-intersection-observer": "^9.5.3",
         "react-vertical-timeline-component": "^3.6.0",
-        "resend": "^3.1.0"
+        "sonner": "^1.5.0",
+        "tailwind-merge": "^2.4.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/node": "^20",
